{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 19,
  "lineage": "4081731d-a5f6-312f-60b9-d029bda833ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "publicGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325483233520:internet-gateway/igw-06e16214c03b8f0e3",
            "id": "igw-06e16214c03b8f0e3",
            "owner_id": "325483233520",
            "tags": {
              "Name": "public Internet gateway"
            },
            "tags_all": {
              "Name": "public Internet gateway"
            },
            "vpc_id": "vpc-0f32f090aa86c0192"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:325483233520:loadbalancer/app/test-lb-tf/e34526b23b82fa27",
            "arn_suffix": "app/test-lb-tf/e34526b23b82fa27",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1884626165.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:325483233520:loadbalancer/app/test-lb-tf/e34526b23b82fa27",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-04210e2c7459f65a8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01bc66041ecb05b7c"
              },
              {
                "subnet_id": "subnet-0b08d18f169e60327"
              }
            ],
            "subnets": [
              "subnet-01bc66041ecb05b7c",
              "subnet-0b08d18f169e60327"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0f32f090aa86c0192",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_subnet.publicsubnet1",
            "aws_subnet.publicsubnet2",
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "albTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:325483233520:targetgroup/tf-example-lb-tg/d01b15f87a8d8c0b",
            "arn_suffix": "targetgroup/tf-example-lb-tg/d01b15f87a8d8c0b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:325483233520:targetgroup/tf-example-lb-tg/d01b15f87a8d8c0b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f32f090aa86c0192"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325483233520:route-table/rtb-0679706738d381685",
            "id": "rtb-0679706738d381685",
            "owner_id": "325483233520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e16214c03b8f0e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route"
            },
            "tags_all": {
              "Name": "public route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f32f090aa86c0192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.publicGW",
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdcf751b4cb8146e",
            "route_table_id": "rtb-0679706738d381685",
            "subnet_id": "subnet-0b08d18f169e60327"
          },
          "dependencies": [
            "aws_internet_gateway.publicGW",
            "aws_route_table.publicRT",
            "aws_subnet.publicsubnet1",
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0994d6b2a16137e9b",
            "route_table_id": "rtb-0679706738d381685",
            "subnet_id": "subnet-01bc66041ecb05b7c"
          },
          "dependencies": [
            "aws_internet_gateway.publicGW",
            "aws_route_table.publicRT",
            "aws_subnet.publicsubnet2",
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325483233520:security-group/sg-0171beea6c8c4fa06",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0171beea6c8c4fa06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "325483233520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security group loadbalancer"
            },
            "tags_all": {
              "Name": "security group loadbalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f32f090aa86c0192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325483233520:security-group/sg-04210e2c7459f65a8",
            "description": "Allow HTTP and HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04210e2c7459f65a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "loadbalancerSG",
            "name_prefix": "",
            "owner_id": "325483233520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security group loadbalancer"
            },
            "tags_all": {
              "Name": "security group loadbalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f32f090aa86c0192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325483233520:subnet/subnet-0b08d18f169e60327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b08d18f169e60327",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325483233520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pranesh-public-1-pa6vz"
            },
            "tags_all": {
              "Name": "pranesh-public-1-pa6vz"
            },
            "vpc_id": "vpc-0f32f090aa86c0192"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325483233520:subnet/subnet-01bc66041ecb05b7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bc66041ecb05b7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325483233520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pranesh-public-2-pa6vz"
            },
            "tags_all": {
              "Name": "pranesh-public-2-pa6vz"
            },
            "vpc_id": "vpc-0f32f090aa86c0192"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325483233520:vpc/vpc-0f32f090aa86c0192",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0d8a63094de992276",
            "default_route_table_id": "rtb-01e5045e6c9b5033f",
            "default_security_group_id": "sg-0d28cf7b68c7b70b4",
            "dhcp_options_id": "dopt-092991c57ac686824",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f32f090aa86c0192",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e5045e6c9b5033f",
            "owner_id": "325483233520",
            "tags": {
              "Name": "pranesh-vpc-pa6vz"
            },
            "tags_all": {
              "Name": "pranesh-vpc-pa6vz"
            }
          },
          "dependencies": [
            "random_string.random"
          ]
        }
      ]
    }
  ]
}